Scrollbars are no longer visible when scaling the cells

--- a/src/resources/sudoku.css
+++ b/src/resources/sudoku.css
@@ -28,7 +28,3 @@
 .text-area:centeredText .text {
     -fx-text-alignment: center ;
 }
-
-.text-area .scroll-bar:vertical:disabled {
-    -fx-opacity: 0;
-}
